[*]: fixed logout
