# internal/router/ogen/oas_response_decoders_gen.go
@@ -601,6 +601,43 @@ func decodeAPILogoutResponse(resp *http.Response) (res APILogoutRes, _ error) {
 			}
 		}
 		return &wrapper, nil
+	case 401:
+		// Code 401.
+		var wrapper APILogoutUnauthorized
+		h := uri.NewHeaderDecoder(resp.Header)
+		// Parse "Set-Cookie" header.
+		{
+			cfg := uri.HeaderParameterDecodingConfig{
+				Name:    "Set-Cookie",
+				Explode: false,
+			}
+			if err := func() error {
+				if err := h.HasParam(cfg); err == nil {
+					if err := h.DecodeParam(cfg, func(d uri.Decoder) error {
+						val, err := d.DecodeValue()
+						if err != nil {
+							return err
+						}
+
+						c, err := conv.ToString(val)
+						if err != nil {
+							return err
+						}
+
+						wrapper.SetCookie = c
+						return nil
+					}); err != nil {
+						return err
+					}
+				} else {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return res, errors.Wrap(err, "parse Set-Cookie header")
+			}
+		}
+		return &wrapper, nil
 	}
 	// Default response.
 	res, err := func() (res APILogoutRes, err error) {
